# xteams-cli

./: .gitignore  .goreleaser.yaml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: pages.yml  release.yml
scripts/: build-skills-site.py
skills/xteams/: SKILL.md
src/: api.rs  auth.rs  cli.rs  commands.rs  content.rs  creds.rs  error.rs  link.rs  main.rs  model.rs  output.rs  seed.rs
src/api/: calendar.rs  chat.rs  csa.rs  substrate.rs
src/auth/: authenticator.rs  credential.rs  device_code.rs  jwt.rs  lock.rs  oauth.rs  session.rs  store.rs  token_cache.rs  token_cache_io.rs
src/commands/: auth.rs  calendar.rs  channel.rs  chat.rs  login.rs  message.rs  team.rs  thread.rs  user.rs
src/content/: convert.rs  mentions.rs  pandoc.rs
src/content/mentions/: pick.rs
src/creds/: macos.rs  unsupported.rs  windows.rs
src/seed/: connection.rs  msal_cache.rs  store.rs
