[package]
name = "xteams-cli"
version = "0.2.1"
edition = "2024"
description = "Unofficial Microsoft Teams CLI that does not require an Azure App"
license = "MIT"
homepage = "https://github.com/boazy/xteams-cli"

[[bin]]
name = "xteams"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "gzip", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
hmac = "0.13"
sha1 = "0.11"
base64 = "0.22"
thiserror = "2"
urlencoding = "2"
eyre = "0.6.12"
color-eyre = "0.6.5"
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }
uuid = { version = "1", features = ["v4"] }
etcetera = "0.11.0"
pulldown-cmark = "0.13.4"
htmd = "0.5.4"
html2text = "0.17.1"

# Cookie decryption deps are platform-specific: macOS reads the Keychain key
# (`security-framework`); Windows DPAPI-unwraps + AES-256-GCM (`windows-sys` +
# `aes-gcm`). Other platforms pull neither (cookie extraction is unsupported).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(windows)'.dependencies]
aes-gcm = "0.11"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

# v1 enforces the safety-critical denies; the full pedantic/nursery/cargo gate
# from the programming skill is deferred to production hardening.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
